Bag button bug has been fixed on small screen sizes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -237,6 +237,7 @@ body {
 
 .shop-btn {
     background-color: #1c3a42;
+    border: solid 2px white;
     width: 100%;
     border-radius: 5px;
     text-decoration: none;
